Use a <textarea> for displaying the tumblrbox code

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 </head>
 <body>
   <h2>Code:</h2>
-  <pre><code>
-  &lt;!-- Start of tumblrbox code --&gt;
-  &lt;script type='text/javascript'&gt;
-  document.write(unescape("%3Cscript src='http://picuous.github.com/tumblrbox/tumblrbox.js' type='text/javascript'%3E%3C/script%3E"));
-  &lt;/script&gt;
-  &lt;!-- End of tumblrbox code --&gt;
-  </code></pre>
+  <textarea style='width: 520px; height: 80px'>
+<!-- Start of tumblrbox code -->
+<script type='text/javascript'>
+document.write(unescape("%3Cscript src='http://picuous.github.com/tumblrbox/tumblrbox.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<!-- End of tumblrbox code -->
+</textarea>
 </body>
 </html>
