Removes the trailing newline

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <script type='text/javascript'>
 document.write(unescape("%3Cscript src='http://picuous.github.com/tumblrbox/tumblrbox.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
-<!-- End of tumblrbox code -->
-</textarea>
+<!-- End of tumblrbox code --></textarea>
 </body>
 </html>
