--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ document.write(unescape("%3Cscript src='http://picuous.github.com/tumblrbox/tumb
 </script>
 <!-- End of Tumblrbox Code --></textarea>
       <ol id="howto">
-        <li>Access to <a href='http://www.tumblr.com/customize' target='_blank'>your tumblog</a> customization page
+        <li>Go to <a href='http://www.tumblr.com/customize' target='_blank'>your tumblog</a> customization page
         <li>Click on "Info" on the upper-left of the page</li>
         <li>Copy/paste the above code in the "Description" area</li>
         <li>Click on the "Save" button</li>
