Update the stylesheet, add some keywords and a footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <title>Tumblrbox - Lightbox effect for Tumblr - courtesy of Picuous</title>
   <meta name="description" content="Tumblrbox is a Lightbox effect for Tumblr">
+  <meta name="keywords" content="tumblr,lightbox,fancybox,picuous">
   <meta name="author" content="Picuous">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -17,12 +18,12 @@
 
 <div id="container">
   <header>
-    <h1>Tumblr.<span>box</span></h1>
+    <a href="http://picuous.github.com/tumblrbox/"><h1>Tumblr.<span>box</span></h1></a>
   </header>
   <div id="main" role="main">
     <h2 class="enable">Enable stunning Lightbox effects on my Tumblr blog</h2>
     <div id="code_howto">
-      <p>Add the following code to your Tumblog:</p>
+      <label for="code">Add the following code to your Tumblog:</label>
       <textarea id="code">
 <!-- Start of Tumblrbox Code -->
 <script type='text/javascript'>
@@ -30,15 +31,15 @@ document.write(unescape("%3Cscript src='http://picuous.github.com/tumblrbox/tumb
 </script>
 <!-- End of Tumblrbox Code --></textarea>
       <ol id="howto">
-        <li>Go to <a href='http://www.tumblr.com/customize' target='_blank'>your tumblog</a> customization page
-        <li>Click on "Info" on the upper-left of the page</li>
-        <li>Copy/paste the above code in the "Description" area</li>
-        <li>Click on the "Save" button</li>
+        <li><span>1</span>Go to <a href='http://www.tumblr.com/customize' target='_blank'>your tumblog</a> customization page
+        <li><span>2</span>Click on "Info" on the upper-left of the page</li>
+        <li><span>3</span>Copy/paste the above code in the "Description" area</li>
+        <li><span>4</span>Click on the "Save" button</li>
       </ol>
     </div>
   </div>
   <footer>
-
+    Copyright 2011, courtesy of <a href="http://picuous.com" title="Transform your pictures into promotional vehicles">Picuous</a>
   </footer>
 </div> <!--! end of #container -->
 
