--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
   <link rel="stylesheet" href="css/style.css">
 
 </head>
