--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div id="container">
   <a href="http://github.com/picuous/tumblrbox"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/4c7dc970b89fd04b81c8e221ba88ff99a06c6b61/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub"></a>
   <header>
-    <a id="title" href="http://picuous.github.com/tumblrbox/">Tumblr.<span>box</span></a>
+    <a id="title" text-data="tumblr." href="http://picuous.github.com/tumblrbox/">Tumblr.<span>box</span></a>
   </header>
   <div id="main" role="main">
     <h2 class="enable">Enable stunning Lightbox effects on my Tumblr blog</h2>
