Add a bookmarklet version

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
     <a id="title" text-data="tumblr.box" href="http://picuous.github.com/tumblrbox/">Tumblr.<span>box</span></a>
   </header>
   <div id="main" role="main">
-    <h2 class="enable">Enable stunning Lightbox effects on my Tumblr blog</h2>
+    <div id="enable">
+      <h2 class="enable">Enable stunning Lightbox effects on my Tumblr blog</h2>
+      <p>or test-drive it using this bookmarklet:
+        <a id="bookmarklet" href="javascript:var%20e=document.createElement('script');e.src='http://picuous.github.com/tumblrbox/tumblrbox.js';e.type='text/javascript';document.getElementsByTagName('head')[0].appendChild(e);void(0)">tumblrbox!</a>
+      </p>
+    </div>
     <div id="code_howto">
       <label for="code">Add the following code to your Tumblog:</label>
       <textarea id="code">
