CSS fix for IE users

--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@ document.write(unescape("%3Cscript src='http://picuous.github.com/tumblrbox/tumb
     </div>
     <div id="further" class="focus">
       <h2>Want more for your pictures? Try <a href="http://picuous.com"/>Picuous</a>!</h2>
-      <img src="css/img/analytics.png" title="Analytics for your pics." class="fright">
       <p class="feature right">
+        <img src="css/img/analytics.png" title="Analytics for your pics." class="fright" />
         <span class="feature_title">Analytics for your pics.</span>
         Know when and where your pictures have been embedded, viewed, liked or shared. Understand who likes you!
       </p>
-      <img src="css/img/linked.png" title="Automatic links." class="fleft">
       <p class="feature left">
+        <img src="css/img/linked.png" title="Automatic links." class="fleft" />
         <span class="feature_title">Automatic links.</span>
         Your pictures spread on the web but are automagically linked to you and your website. It's an easy way to drive traffic and SEO!
       </p>
-      <img src="css/img/copy.png" title="5&prime; setup" class="fright">
       <p class="feature right">
+        <img src="css/img/copy.png" title="5&prime; setup" class="fright" />
         <span class="feature_title">5&prime; setup.</span>
         Copy-paste one line of JavaScript code in your header (no technical skills required!), and you're good to go. Now back to optimizing your website.
       </p>
