Add OpenGraph tags

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
     })();
 
   </script>
+  
+  <meta property='og:site_name' content='Picuous' />
+  <meta property='og:title' content='Tumblrbox - Enable a Lightbox effect on your Tumblr blog in 2′' />
+  <meta property='og:type' content='website' />
+  <meta property='og:url' content='http://picuous.github.com/tumblrbox/' />
+  <meta property='og:image' content='http://picuous.github.com/tumblrbox/css/img/logo.png' />
 
 </head>
 <body>
