--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
   <meta property='og:type' content='website' />
   <meta property='og:url' content='http://picuous.github.com/tumblrbox/' />
   <meta property='og:image' content='http://picuous.github.com/tumblrbox/css/img/logo.png' />
+  
+  <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4e71e38261c3288b"></script>
 
 </head>
 <body>
@@ -50,6 +52,16 @@
         <h2>Enable a Lightbox effect on your Tumblr blog in 2&prime;</h2>
         <p id="note">Note: this service is neither maintained nor endorsed by Tumblr</p>
         <p class="button" id="enable">Enable tumblrbox &nbsp;&rarr;</p>
+        <!-- AddThis Button BEGIN -->
+        <div class="addthis_toolbox addthis_default_style">
+        <a class="addthis_button_preferred_1"></a>
+        <a class="addthis_button_preferred_2"></a>
+        <a class="addthis_button_preferred_3"></a>
+        <a class="addthis_button_preferred_4"></a>
+        <a class="addthis_button_compact"></a>
+        <a class="addthis_counter addthis_bubble_style"></a>
+        </div>
+        <!-- AddThis Button END -->
       </div>
       <p>… or try it out using this bookmarklet:
         <a id="bookmarklet" class="focuslink" href="javascript:var%20e=document.createElement('script');e.src='http://picuous.github.com/tumblrbox/tumblrbox.js';e.type='text/javascript';document.getElementsByTagName('head')[0].appendChild(e);void(0)">tumblrbox!</a>
