--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   </script>
   
-  <meta property='og:site_name' content='Picuous' />
+  <meta property='og:site_name' content='Tumblrbox' />
   <meta property='og:title' content='Tumblrbox - Enable a Lightbox effect on your Tumblr blog in 2′' />
   <meta property='og:type' content='website' />
   <meta property='og:url' content='http://picuous.github.com/tumblrbox/' />
