--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div id="presentation">
       <p class="button" id="enable">Enable tumblrbox &nbsp;&rarr;</p>
       <!-- AddThis Button BEGIN -->
-      <div class="addthis_toolbox addthis_default_style">
+      <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
         <a class="addthis_button_preferred_1"></a>
         <a class="addthis_button_preferred_2"></a>
         <a class="addthis_button_preferred_3"></a>
@@ -99,7 +99,8 @@ document.write(unescape("%3Cscript src='http://picuous.github.com/tumblrbox/tumb
   </div>
   <footer>
     <div id="footer">
-      <a id="twitter" href="http://twitter.com/tumblrbox">Follow us on twitter</a>
+      <a href="https://twitter.com/tumblrbox" class="twitter-follow-button" id="twitter">Follow @tumblrbox</a>
+      <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
       <p id="note">Note: this service is neither maintained nor endorsed by Tumblr</p>
       <p id="copy">&copy; 2011, brought to you by the fine folks at <a href="http://picuous.com" title="Transform your pictures into promotional vehicles">Picuous</a>.</p>
     </div>
